<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgr_gragient"
    tools:context="ru.ematveev.guessnumber2.MainActivity">


    <EditText
        android:id="@+id/editText"
        android:text="@string/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/textEditColor2"
        android:ems="2"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textSize="48sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_guess"
        android:text="@string/button_guess"
        android:background="@drawable/round_button_guess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/editText"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/button_start"
        android:text="@string/button_start"
        android:background="@drawable/round_button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="32sp"
        android:textColor="@color/textEditColor2"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_guess"
        />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_view"
        android:textColor="@color/textEditColor2"
        android:textSize="32sp" />

    <TextView
        android:text="@string/text_view_attemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/editText"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:id="@+id/text_view_attemp"
         />

</RelativeLayout>
